# papyrus

./: .clippy.toml  .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.lock.orig  Cargo.toml  Dockerfile  LICENSE  README.adoc  README.md  Scarb.toml  check_starknet_api_version_dependency.sh  codecov.yml  commitlint.config.js  config.ron  corelib  dependencies.sh  disk.txt  errorfile  et q  goose_del.html  install_papyrus.py  invoke_no_entry_point_selector.json  papyrus_utilities.Dockerfile  ram.txt  real_trained_dict  results  rustfmt.toml  temp.txt  text.txt  text2.txt  text3.txt  typos.toml
crates/compression_performance/: Cargo.toml
crates/compression_performance/src/: main.rs
crates/consensus/: Cargo.toml  Scarb.toml  build.rs
crates/consensus/cairo_tests/: test_staking.cairo
crates/consensus/src/: lib.cairo  lib.rs  staking.cairo  test_staking.rs
crates/consensus/tests/: test_contract.cairo  test_staking.cairo
crates/libmdbx-rs/: Cargo.toml  README.md
crates/libmdbx-rs/benches/: cursor.rs  transaction.rs  utils.rs
crates/libmdbx-rs/mdbx-sys/: Cargo.toml  build.rs
crates/libmdbx-rs/src/: codec.rs  cursor.rs  database.rs  error.rs  flags.rs  lib.rs  table.rs  transaction.rs
crates/libmdbx-rs/tests/: cursor.rs  environment.rs  transaction.rs
crates/papyrus_base_layer/: Cargo.toml
crates/papyrus_base_layer/resources/: ganache-db.tar
crates/papyrus_base_layer/src/: base_layer_test.rs  core_contract_latest_block.abi  ethereum_base_layer_contract.rs  lib.rs
crates/papyrus_common/: Cargo.toml
crates/papyrus_common/resources/: block_hash.json  block_v0_13_1.json  class.json  deprecated_block_hash_v0.json  deprecated_block_hash_v1.json  deprecated_block_hash_v1_no_events.json  deprecated_block_hash_v2.json  deprecated_class.json  deprecated_class_missing_compiler_version.json  deprecated_class_missing_fields.json  deprecated_transaction_hash.json  transaction_hash.json  tx_hash.json
crates/papyrus_common/src/: block_hash.rs  block_hash_test.rs  class_hash.rs  class_hash_test.rs  deprecated_class_abi.rs  lib.rs  metrics.rs  patricia_hash_tree.rs  patricia_hash_tree_test.rs  pending_classes.rs  profiler.rs  python_json_formatter.rs  state.rs  state_diff_commitment.rs  state_diff_commitment_test.rs  storage_query.rs  transaction_hash.rs  transaction_hash_test.rs
crates/papyrus_config/: Cargo.toml  README.md
crates/papyrus_config/src/: command.rs  config_test.rs  converters.rs  dumping.rs  lib.rs  loading.rs  presentation.rs  representation.rs  validators.rs
crates/papyrus_discovery/: Cargo.toml
crates/papyrus_discovery/src/: discovery_test.rs  lib.rs  mixed_behaviour.rs
crates/papyrus_execution/: Cargo.toml
crates/papyrus_execution/config_files/: default.json  test.json
crates/papyrus_execution/resources/: consensus_Staking.compiled_contract_class.json  versioned_constants_13_0.json  versioned_constants_13_1.json
crates/papyrus_execution/src/: blockifier_state.rs  blockifier_state_test.rs  execution_test.rs  execution_utils.rs  lib.rs  objects.rs  state_reader.rs  state_reader_test.rs  test_utils.rs  testing_instances.rs
crates/papyrus_gateway/: .gitignore  Cargo.toml  default_config.json
crates/papyrus_gateway/resources/: V0_3_0_starknet_api_openrpc.json  V0_4_0_starknet_api_openrpc.json  block_with_transaction_hashes.json  block_with_transactions.json  contract_class.json  contract_compiled.json  deploy_transaction.json  deprecated_class.json  invoke_transaction_receipt.json  sierra_program_base64.json  starknet_api_openrpc.json  state_update.json
crates/papyrus_gateway/src/: api.rs  block.rs  broadcasted_transaction.rs  broadcasted_transaction_test.rs  compression_utils.rs  compression_utils_test.rs  deprecated_contract_class.rs  gateway_test.rs  lib.rs  middleware.rs  state.rs  syncing_state.rs  test_utils.rs  transaction.rs  transaction_test.rs  utils.rs  version_config.rs  version_config_test.rs
crates/papyrus_load_test/: Cargo.toml
crates/papyrus_load_test/resources/: block_hash.txt  block_hash_and_class_hash.txt  block_hash_and_contract_address.txt  block_hash_and_transaction_index.txt  block_number.txt  block_number_and_class_hash.txt  block_number_and_contract_address.txt  block_number_and_transaction_index.txt  block_range_and_contract_address.txt  transaction_hash.txt
crates/papyrus_load_test/src/: compare_endpoints.rs  create_files.rs  create_request.rs  gateway_functions.rs  lib.rs  load_tests.rs  main.rs  precision_test.rs  py.py  scenarios.rs  transactions.rs
crates/papyrus_monitoring_gateway/: Cargo.toml
crates/papyrus_monitoring_gateway/src/: README.md  api.rs  gateway_test.rs  lib.rs
crates/papyrus_network/: Cargo.toml  build.rs
crates/papyrus_network/src/: behaviour.rs  block_headers_protocol.rs  block_headers_protocol_test.rs  db_executor.rs  e2e_broadcast_test.rs  gossipsub_impl.rs  lib.rs  mixed_behaviour.rs  network_manager.rs  peer_manager.rs  sync_notify_executor.rs  test_utils.rs  utils.rs
crates/papyrus_node/: Cargo.toml
crates/papyrus_node/config/: Cargo.toml
crates/papyrus_node/examples/: get_transaction_hash.rs
crates/papyrus_node/resources/: block_with_transaction_hashes.json  default_config.json  state_update.json
crates/papyrus_node/src/: lib.rs  main.rs  main_test.rs  version.rs  version_test.rs
crates/papyrus_p2p_sync/: Cargo.toml
crates/papyrus_p2p_sync/src/: header.rs  header_test.rs  lib.rs  p2p_sync_test.rs  state_diff.rs  state_diff_test.rs  stream_builder.rs  stream_factory.rs  test_utils.rs
crates/papyrus_pending/: Cargo.toml
crates/papyrus_pending/src/: lib.rs  pending_test.rs
crates/papyrus_proc_macros/: Cargo.toml
crates/papyrus_proc_macros/src/: lib.rs
crates/papyrus_protobuf/: Cargo.toml  build.rs
crates/papyrus_protobuf/src/: lib.rs  (+3 more)
crates/papyrus_rpc/: Cargo.toml
crates/papyrus_storage/: Cargo.toml  README.md
crates/papyrus_sync/: Cargo.toml
crates/starknet_api/: Cargo.toml
crates/starknet_client/: Cargo.toml
crates/starknet_reader_client/: Cargo.toml
crates/starknet_writer_client/: Cargo.toml
crates/test_utils/: Cargo.toml
(+1190 files in other folders)
