[workspace]
# Using version 2 to avoid unifying features. For more info, read:
#   https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/papyrus_base_layer",
    "crates/papyrus_execution",
    "crates/papyrus_load_test",
    "crates/papyrus_monitoring_gateway",
    "crates/papyrus_node",
    "crates/papyrus_proc_macros",
    "crates/papyrus_rpc",
    "crates/papyrus_storage",
    "crates/papyrus_sync",
    "crates/starknet_client",
    "crates/test_utils",
    "crates/dump_declared_classes"
]

[workspace.package]
version = "0.0.5"
edition = "2021"
repository = "https://github.com/starkware-libs/papyrus/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.44"
assert_matches = "1.5.0"
async-stream = "0.3.3"
async-trait = "0.1.56"
axum = "0.6.12"
base64 = "0.13.0"
bitvec = "1.0.1"
blockifier = "0.3.0-rc0"
byteorder = "1.4.3"
cairo-lang-starknet = "2.2.0"
cairo-lang-casm = "2.2.0"
cairo-lang-utils = "2.2.0"
cairo-vm = "0.8.2"
camelpaste = "0.1.0"
chrono = "0.4.26"
clap = { version = "4.3.10" }
const_format = "0.2.30"
derive_more = "0.99.16"
enum-iterator = "1.4.1"
ethers = "2.0.3"
flate2 = "1.0.24"
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
hex = "0.4.3"
http = "0.2.8"
human_bytes = "0.4.3"
hyper = "0.14"
indexmap = "1.9.2"
insta = "1.29.0"
integer-encoding = "3.0.4"
itertools = "0.10.5"
jsonrpsee = "0.18.1"
jsonschema = "0.17.0"
lazy_static = "1.4.0"
libmdbx = "0.3.5"
lru = "0.12.0"
memmap2 = "0.8.0"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
mockall = "0.11.2"
mockito = "0.31.0"
num-bigint = "0.4"
num-traits = "0.2.15"
once_cell = "1.17.1"
os_info = "3.6.0"
page_size = "0.6.0"
paste = "1.0.9"
primitive-types = "0.12.1"
parity-scale-codec = "3.5.0"
pretty_assertions = "1.3.0"
prometheus-parse = "0.2.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.9.0"
reqwest = "0.11"
rustc-hex = "2.1.0"
schemars = "0.8.12"
serde = "1.0.130"
serde_json = "1.0.81"
serde_yaml = "0.9.16"
sha3 = "0.10.8"
simple_logger = "4.0.0"
starknet_api = "0.5.0-rc1"
starknet-core = "0.6.0"
starknet-crypto = "0.5.1"
strum = "0.25.0"
strum_macros = "0.25.2"
tempfile = "3.3.0"
test-case = "3.2.1"
thiserror = "1.0.31"
tokio = "1.18.2"
tokio-retry = "0.3"
tokio-stream = "0.1.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tower = "0.4"
url = "2.2.2"
validator = "0.12"
