[package]
name = "papyrus_base_layer"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
ethers.workspace = true
papyrus_config = { path = "../papyrus_config", version = "0.4.0-dev.2" }
rustc-hex.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
url.workspace = true

[dev-dependencies]
ethers-core = { version = "2.0.3" }
pretty_assertions.workspace = true
starknet_api = { workspace = true, features = ["testing"] }
starknet-types-core.workspace = true
tar = { version = "0.4.38" }
tempfile.workspace = true
test-with = { version = "0.9.3", default-features = false, features = [
    "executable",
] }
