[package]
name = "papyrus_common"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Common utils and objects for a Starknet node."

[dependencies]
hex.workspace = true
lazy_static.workspace = true
serde.workspace = true
starknet_api.workspace = true
starknet-crypto.workspace = true

[dev-dependencies]
serde_json = { workspace = true, features = ["arbitrary_precision"]}
test_utils = { path = "../test_utils" }
