[package]
name = "papyrus_common"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Common utils and objects for a Starknet node."

[dependencies]
bitvec.workspace = true
cairo-lang-starknet.workspace = true
hex.workspace = true
lazy_static.workspace = true
serde.workspace = true
starknet_api.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision"] }
sha3.workspace = true
test_utils = { path = "../test_utils" }
