[package]
name = "papyrus_config"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["tempfile"]  # Dependency of a doc-test

[dependencies]
clap = { workspace = true, features = ["string"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
itertools.workspace = true
tempfile.workspace = true
test_utils = { path = "../test_utils" }
