[package]
name = "papyrus_discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.7" }
libp2p-identity = { version = "0.1.1" }
libp2p.workspace = true
libp2p-swarm-derive = { version = "0.32.0" }
thiserror = { version = "1.0.31" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
primitive-types = { version = "0.12.1" }

[dev-dependencies]
rand = { version = "0.8.5" }
