[package]
name = "papyrus_execution"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Transaction and entry point execution functionality for a Papyrus node."

[dependencies]
blockifier.workspace = true
cairo-lang-starknet.workspace = true
cairo-vm.workspace = true
lazy_static.workspace = true
papyrus_storage = { git = "https://github.com/starkware-libs/papyrus", rev = "77211ef" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"]}
starknet_api.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-utils.workspace = true
indexmap = { workspace = true, features = ["serde"] }
papyrus_storage = { git = "https://github.com/starkware-libs/papyrus", rev = "77211ef" , features = ["testing"] }
test_utils = { path = "../test_utils" }
