[package]
name = "papyrus_execution"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Transaction and entry point execution functionality for a Papyrus node."

[features]
testing = ["rand", "rand_chacha", "test_utils"]

[dependencies]
anyhow.workspace = true
blockifier = { git = "https://github.com/LucasLvy/blockifier/", rev = "f1cfd08" }
cairo-lang-starknet.workspace = true
cairo-vm.workspace = true
indexmap.workspace = true
itertools.workspace = true
lazy_static.workspace = true
papyrus_common = { path = "../papyrus_common", version = "0.3.0-dev.1" }
papyrus_config = { path = "../papyrus_config", version = "0.3.0-dev.1" }
papyrus_storage = { path = "../papyrus_storage", version = "0.3.0-dev.1" }
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet_api.workspace = true
starknet-types-core = { workspace = true, features = ["num-traits"] }
test_utils = { path = "../test_utils", optional = true }
thiserror.workspace = true
tracing.workspace = true
num-traits = "0.2.17"

[dev-dependencies]
assert_matches.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-utils.workspace = true
indexmap = { workspace = true, features = ["serde"] }
papyrus_storage = { path = "../papyrus_storage", features = ["testing"] }
pretty_assertions.workspace = true
rand.workspace = true
rand_chacha.workspace = true
test_utils = { path = "../test_utils" }
