[package]
name = "papyrus_gateway"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
futures.workspace = true
futures-util.workspace = true
hyper = { workspace = true, features = ["full"] }
jsonrpsee = { workspace = true, features = ["full"] }
metrics.workspace = true
papyrus_common = { path = "../papyrus_common"}
papyrus_config = { git = "https://github.com/starkware-libs/papyrus", rev = "960765e"  }
papyrus_execution = { path = "../papyrus_execution" }
papyrus_proc_macros = { path = "../papyrus_proc_macros"}
papyrus_storage = { git = "https://github.com/starkware-libs/papyrus", branch = "mohammad/Separate_papyrus_storage_for_SN_API_new_version_base_branch" }
starknet_client = { path = "../starknet_client" }
regex = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tokio-stream.workspace = true
tower = { workspace = true, features = ["full"]}
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-starknet.workspace = true
camelpaste.workspace = true
derive_more.workspace = true
hex.workspace = true
jsonschema.workspace = true
lazy_static.workspace = true
metrics-exporter-prometheus = { version = "0.12.1" }
papyrus_storage = { git = "https://github.com/starkware-libs/papyrus", branch = "mohammad/Separate_papyrus_storage_for_SN_API_new_version_base_branch", features = ["testing"] }
pretty_assertions.workspace = true
prometheus-parse.workspace = true
rand_chacha.workspace = true
test_utils = { path = "../test_utils" }
starknet_api = { workspace = true, features = ["testing"] }
starknet_client = { path = "../starknet_client", features = ["testing"] }
indexmap = { workspace = true, features = ["serde"] }
rand.workspace = true
