[package]
name = "papyrus_gateway"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
flate2.workspace = true
futures.workspace = true
futures-util.workspace = true
hyper = { workspace = true, features = ["full"] }
jsonrpsee = { workspace = true, features = ["full"] }
metrics.workspace = true
papyrus_common = { path = "../papyrus_common"}
papyrus_config = { path = "../papyrus_config", version = "0.0.4" }
papyrus_execution = { path = "../papyrus_execution" }
papyrus_proc_macros = { path = "../papyrus_proc_macros"}
papyrus_storage = { path = "../papyrus_storage", version = "0.0.4" }
starknet_client = { path = "../starknet_client" }
regex = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"]}
starknet_api.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tokio-stream.workspace = true
tower = { workspace = true, features = ["full"]}
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_matches.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-starknet.workspace = true
camelpaste.workspace = true
derive_more.workspace = true
enum-iterator.workspace = true
hex.workspace = true
jsonschema.workspace = true
lazy_static.workspace = true
metrics-exporter-prometheus = { version = "0.12.1" }
mockall.workspace = true
papyrus_storage = { path = "../papyrus_storage", features = ["testing"] }
pretty_assertions.workspace = true
prometheus-parse.workspace = true
rand_chacha.workspace = true
reqwest.workspace = true
test_utils = { path = "../test_utils" }
starknet_api = { workspace = true, features = ["testing"] }
starknet_client = { path = "../starknet_client", features = ["testing"] }
indexmap = { workspace = true, features = ["serde"] }
rand.workspace = true
