[package]
name = "papyrus_load_test"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
goose.workspace = true
once_cell.workspace = true
papyrus_test_utils = { path = "../papyrus_test_utils" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
rand.workspace = true
reqwest.workspace = true
