[package]
name = "papyrus_load_test"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
compare_endpoints = []

[dependencies]
anyhow.workspace = true
assert_matches.workspace = true
goose = "0.17.0"
once_cell.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"]}
test_utils = { path = "../test_utils" }
tokio.workspace = true
rand.workspace = true
reqwest.workspace = true

[dev-dependencies]
lazy_static.workspace = true
pretty_assertions.workspace = true