[package]
name = "papyrus_monitoring_gateway"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
hyper = { workspace = true, features = ["full"] }
metrics-exporter-prometheus = { version = "0.12.1" }
metrics-process = { version = "1.0.11" }
papyrus_storage = { git = "https://github.com/starkware-libs/papyrus", rev = "77211ef"}
papyrus_config = { git = "https://github.com/starkware-libs/papyrus", rev = "77211ef"  }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tracing.workspace = true

[dev-dependencies]
http-body = { version = "0.4.5" }
metrics.workspace = true
papyrus_storage = { git = "https://github.com/starkware-libs/papyrus", rev = "77211ef" , features = ["testing"] }
pretty_assertions.workspace = true
tower = { workspace = true, features = ["util"] }
