[package]
name = "papyrus_monitoring_gateway"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
hyper = { workspace = true, features = ["full"] }
metrics-exporter-prometheus = { version = "0.12.1" }
metrics-process = { version = "1.0.11" }
papyrus_storage = { path = "../papyrus_storage", version = "0.3.0" }
papyrus_config = { path = "../papyrus_config", version = "0.3.0" }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
starknet_client = { path = "../starknet_client" }
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tracing.workspace = true
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
http-body = { version = "0.4.5" }
metrics.workspace = true
papyrus_storage = { path = "../papyrus_storage", features = ["testing"] }
pretty_assertions.workspace = true
tower = { workspace = true, features = ["util"] }
