[package]
name = "papyrus_network"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
testing = []

[dependencies]
async-stream.workspace = true
bytes.workspace = true
chrono.workspace = true
derive_more.workspace = true
futures.workspace = true
lazy_static.workspace = true
libp2p = { workspace = true, features = [
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "noise",
    "quic",
    "tcp",
    "tokio",
    "yamux",
    "serde",
] }
metrics.workspace = true
replace_with.workspace = true
papyrus_common = { path = "../papyrus_common", version = "0.4.0-rc.0" }
papyrus_config = { path = "../papyrus_config", version = "0.4.0-rc.0" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
tracing.workspace = true
unsigned-varint = { workspace = true, features = ["std"] }
validator = { workspace = true, features = ["derive"] }

# Binaries dependencies
clap = { workspace = true, optional = true, features = ["derive"] }


[dev-dependencies]
assert_matches.workspace = true
deadqueue = { workspace = true, features = ["unlimited"] }
defaultmap.workspace = true
libp2p-swarm-test.workspace = true
mockall.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["full", "sync", "test-util"] }
tokio-stream.workspace = true
void.workspace = true
